--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://61353841-f231-419a-bf73-a38fd7bf441c.preview.emergentagent.com
 WDS_SOCKET_PORT=443
